tests/files/type_checker_tests/should_pass/265.cmdr
//Test if statements type check
if (true) { println 1; } else if (false) { println 2; } else { println 3; }
