tests/files/type_checker_tests/should_fail/001.cmdr
//Should fail since else if condition is not boolean
if (true) {
	echo "HI";
} else if ("false") {
	echo "HELLO";
}